--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "react": "^16.4.0",
+    "react-dates": "^16.7.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
