--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.4.0",
     "react-dates": "^16.7.0",
     "react-dom": "^16.4.0",
+    "react-rating": "^1.1.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
